--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,10 @@
         <button type="button" class="card__delete-button"></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
-          <button type="button" class="card__like-button"></button>
+          <div class="card__like-container">
+            <button type="button" class="card__like-button"></button>
+            <p class="like__counts"></p>
+          </div>
         </div>
       </li>
     </template>
