Исправил стили для лайков

--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,7 @@
           <h2 class="card__title"></h2>
           <div class="card__like-container">
             <button type="button" class="card__like-button"></button>
-            <p class="like__counts"></p>
+            <p class="card__like-counter"></p>
           </div>
         </div>
       </li>
