Исправил баг с валидацией попапа аватара

--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@
             data-error="Разрешены только ссылки на изображения"
             required
           />
-          <span class="popup__error link-input-error"></span>
+          <span class="form__input-error popup__error link-avatar-error"></span>
           <button type="submit" class="button popup__button">Сохранить</button>
         </form>
       </div>
